# padproxy

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/padproxy-cli/: Cargo.toml
crates/padproxy-cli/src/: bt_emulate.rs  dbus.rs  discover_cam.rs  main.rs
crates/padproxy-core/: Cargo.toml
crates/padproxy-core/src/: autodetect.rs  blocklist.rs  bluetooth.rs  bthid.rs  capture.rs  devices.rs  event_code.rs  gimx.rs  leds.rs  lib.rs  linux.rs  logging.rs  mobile.rs  outputs.rs  power.rs  presets.rs  profiles.rs  remapper.rs  service.rs  session.rs  slots.rs  vision.rs
crates/padproxy-gui/: Cargo.toml  build.rs
crates/padproxy-gui/qml/: crosshair.qml  desktop.qml  layer.qml  magnifier.qml  main.qml  radial.qml
crates/padproxy-gui/src/: capture3d.rs  discover.rs  gui_bridge.rs  lib.rs  main.rs  qml_registration.cpp
docs/: REWASD_FEATURE_MATRIX.md
profiles/: nes-2button-xa.yaml
src/: devices.rs  event_code.rs  gui_bridge.rs  lib.rs  linux.rs
