[package]
name = "padproxyctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bluer = { version = "0.17.4", features = ["bluetoothd"] }
clap.workspace = true
evdev.workspace = true
padproxy-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
zbus = "5.16.0"
