[package]
name = "padproxy_gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
padproxy-core.workspace = true
serde_json.workspace = true

[build-dependencies]
cxx-qt-build.workspace = true

[[bin]]
name = "padproxy"
path = "src/main.rs"
